--- a/.github/workflows/WebRtcInteropWindows.yml
+++ b/.github/workflows/WebRtcInteropWindows.yml
@@ -52,7 +52,7 @@ jobs:
         cd src
         git checkout branch-heads/5481
         gclient sync
-        xcopy /E /I D:\a\WebRtcInterop\WebRtcInterop .
+        xcopy /E /I D:\a\WebRtcInterop\WebRtcInterop WebRtcInterop
         (Get-Content BUILD.gn).replace('rtc_static_library', 'rtc_shared_library') | Set-Content BUILD.gn
         (Get-Content BUILD.gn) -notmatch 'complete_static_lib' | Set-Content BUILD.gn
         (Get-Content webrtc.gni).replace('!build_with_chromium && is_component_build', 'false') | Set-Content webrtc.gni
